idocs-share/source/web/themes/citeckTheme/presentation.css
/* ... */
.share-form .form-container .form-fields .form-field,
.share-form .form-container .form-fields .yui-g, 
.share-form .form-container .form-fields .yui-gb,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .form-field,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .yui-g,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .yui-gb {
  margin-bottom: 10px;
  padding-bottom: 10px;
  border-bottom: 1px solid #ccc;
  margin-right: 0;
}

.share-form .form-container .form-fields .form-field .yui-g,
.share-form .form-container .form-fields .yui-g .form-field {
  clear: both;
  margin: 0;
  padding: 0;
  border: none;
}

.share-form .form-container .form-fields .yui-u .form-field:not(:last-child) {
  margin-bottom: 15px;
}

.yui-skin-citeckTheme .yui-panel-container .yui-panel form.bd .form-fields .yui-g .yui-u .form-field {
  margin: 0;
  padding: 0;
  border: none;
  position: relative;
}

.share-form .form-container .form-fields .set .form-field > .object-finder .dynamic-doclib-table {
  width: 97%;
  margin: auto;
}

.share-form .form-container .form-fields .set .form-field > .object-finder .show-picker .yui-button {
   margin-right: 10px; 
}

.share-form .form-container .form-fields .form-field > .object-finder > div.object-finder-items:empty,
.share-form .form-container .form-fields .yui-u .form-field > .object-finder > div.object-finder-items:empty,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .form-field > .object-finder > div.object-finder-items:empty,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .yui-u .form-field > .object-finder > div.object-finder-items:empty {
   display: none;
}

.share-form .form-container .form-fields .set .form-field > .object-finder > div.object-finder-items,
.share-form .form-container .form-fields .set .form-field > .object-finder > .object-finder-list,
.share-form .form-container .form-fields .yui-u .form-field > .object-finder > div.object-finder-items,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .set .form-field > .object-finder > div.object-finder-items,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .set .form-field > .object-finder > .object-finder-list,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .yui-u .form-field > .object-finder > div.object-finder-items {
   display: block;
}

.form-element-border {
  border: 1px solid #ccc;
}

.share-form .form-container .form-fields .yui-u .form-field > .object-finder > div.object-finder-items {
   margin-bottom: 10px;
}

.share-form .form-container .form-fields .yui-u .form-field > label,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .yui-u .form-field > label {
   margin: 0;
   padding-bottom: 10px; 
}

.share-form .form-container .form-fields .yui-u .form-field > input[type="text"].number,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .yui-u .form-field > input[type="text"].number {
  position: initial;
  width: 100%;
}

.share-form .form-container .form-fields .yui-u .form-field > input[type="text"].date-entry,
.share-form .form-container .form-fields .yui-u .form-field > input[type="text"].time-entry,
.share-form .form-container .form-fields .form-field .yui-u input[type="text"].date-entry,
.share-form .form-container .form-fields .form-field .yui-u input[type="text"].time-entry,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .yui-u .form-field > input[type="text"].date-entry,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .yui-u .form-field > input[type="text"].time-entry {
   float: left;
   position: initial;
   clear: none;
}

.share-form .form-container .form-fields .yui-u .form-field > input[type="text"].date-entry,
.share-form .form-container .form-fields .yui-u .form-field > input[type="text"].time-entry,
.share-form .form-container .form-fields .form-field .yui-u input[type="text"].date-entry,
.share-form .form-container .form-fields .form-field .yui-u input[type="text"].time-entry,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .yui-u .form-field > input[type="text"].date-entry,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .yui-u .form-field > input[type="text"].time-entry {
   width: 75px;
}

.share-form .form-container .form-fields .form-field .yui-u .format-info {
  clear: both;
}

.share-form .form-container .form-fields .yui-u .form-field > input[type="text"].time-entry,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .yui-u .form-field > input[type="text"].time-entry {
   margin-left: 35px;
}

.share-form .form-container .form-fields .yui-u .form-field input[type="text"].time-entry + div.format-info > span.date-format,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .yui-u .form-field input[type="text"].time-entry + div.format-info > span.date-format {
  margin: 0;
}

.share-form .form-container .form-fields .yui-u .form-field input[type="text"].time-entry + div.format-info,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .yui-u .form-field input[type="text"].time-entry + div.format-info {
   width: 100%;
}

.share-form .form-container .form-fields .yui-u .form-field > .format-info > span.time-format,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .yui-u .form-field > .format-info > span.time-format {
  margin-left: 75px;
}

.share-form .form-container .form-fields .yui-u .form-field > .format-info > span.date-format,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .yui-u .form-field > .format-info > span.date-format {
  margin-left: 5px;
}

.share-form .form-container .form-fields .yui-u .form-field > a,
.yui-skin-citeckTheme .yui-panel-container .yui-panel .form-fields .yui-u .form-field > a {
    float: left;
    margin: 5px 0 0 5px;
    position: initial;
}
/* ... */

